--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -89,7 +89,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QComboBox" name="comboBox"/>
+                   <widget class="QComboBox" name="crossSection"/>
                   </item>
                  </layout>
                 </item>
@@ -99,7 +99,7 @@
                </layout>
                <zorder>groupBox</zorder>
                <zorder>label_3</zorder>
-               <zorder>comboBox</zorder>
+               <zorder>crossSection</zorder>
                <zorder>verticalLayoutWidget</zorder>
               </widget>
              </item>
