--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,14 +7,14 @@
     <x>0</x>
     <y>0</y>
     <width>339</width>
-    <height>539</height>
+    <height>576</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralwidget">
-   <layout class="QGridLayout" name="gridLayout_6">
+   <layout class="QGridLayout" name="gridLayout">
     <item row="0" column="0">
      <layout class="QHBoxLayout" name="horizontalLayout_2">
       <item>
@@ -24,6 +24,11 @@
           <property name="title">
            <string>Beam Bending</string>
           </property>
+          <layout class="QGridLayout" name="gridLayout_3">
+           <item row="0" column="0">
+            <layout class="QVBoxLayout" name="beamBending"/>
+           </item>
+          </layout>
          </widget>
         </item>
         <item>
@@ -39,6 +44,12 @@
        <layout class="QVBoxLayout" name="verticalLayout_6">
         <item>
          <widget class="QGroupBox" name="groupBox">
+          <property name="maximumSize">
+           <size>
+            <width>180</width>
+            <height>16777215</height>
+           </size>
+          </property>
           <property name="title">
            <string>Beam Options</string>
           </property>
@@ -97,10 +108,6 @@
                  <layout class="QVBoxLayout" name="crossSectionLayout"/>
                 </item>
                </layout>
-               <zorder>groupBox</zorder>
-               <zorder>label_3</zorder>
-               <zorder>crossSection</zorder>
-               <zorder>verticalLayoutWidget</zorder>
               </widget>
              </item>
             </layout>
@@ -110,6 +117,12 @@
         </item>
         <item>
          <widget class="QGroupBox" name="groupBox_2">
+          <property name="maximumSize">
+           <size>
+            <width>180</width>
+            <height>116</height>
+           </size>
+          </property>
           <property name="title">
            <string>Fixing Options</string>
           </property>
@@ -147,6 +160,12 @@
         </item>
         <item>
          <widget class="QGroupBox" name="groupBox_4">
+          <property name="maximumSize">
+           <size>
+            <width>180</width>
+            <height>198</height>
+           </size>
+          </property>
           <property name="title">
            <string>Loading Options</string>
           </property>
@@ -191,6 +210,29 @@
                      <string>Single Load</string>
                     </property>
                    </widget>
+                  </item>
+                 </layout>
+                </item>
+                <item row="1" column="0">
+                 <layout class="QHBoxLayout" name="horizontalLayout_6">
+                  <item>
+                   <widget class="QSlider" name="horizontalSlider">
+                    <property name="enabled">
+                     <bool>true</bool>
+                    </property>
+                    <property name="maximum">
+                     <number>99</number>
+                    </property>
+                    <property name="singleStep">
+                     <number>0</number>
+                    </property>
+                    <property name="orientation">
+                     <enum>Qt::Horizontal</enum>
+                    </property>
+                   </widget>
+                  </item>
+                  <item>
+                   <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
                   </item>
                  </layout>
                 </item>
