--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -216,7 +216,7 @@
                 <item row="1" column="0">
                  <layout class="QHBoxLayout" name="horizontalLayout_6">
                   <item>
-                   <widget class="QSlider" name="horizontalSlider">
+                   <widget class="QSlider" name="loadPosition">
                     <property name="enabled">
                      <bool>true</bool>
                     </property>
