--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -227,7 +227,7 @@
                      <bool>true</bool>
                     </property>
                     <property name="maximum">
-                     <number>99</number>
+                     <number>100</number>
                     </property>
                     <property name="singleStep">
                      <number>0</number>
@@ -238,7 +238,7 @@
                    </widget>
                   </item>
                   <item>
-                   <widget class="QDoubleSpinBox" name="doubleSpinBox"/>
+                   <widget class="QDoubleSpinBox" name="loadPositionBox"/>
                   </item>
                  </layout>
                 </item>
