--- a/crosssections/rectangleform.ui
+++ b/crosssections/rectangleform.ui
@@ -31,10 +31,18 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QDoubleSpinBox" name="width"/>
+      <widget class="QDoubleSpinBox" name="width">
+       <property name="minimum">
+        <double>0.010000000000000</double>
+       </property>
+      </widget>
      </item>
      <item row="1" column="1">
-      <widget class="QDoubleSpinBox" name="height"/>
+      <widget class="QDoubleSpinBox" name="height">
+       <property name="minimum">
+        <double>0.010000000000000</double>
+       </property>
+      </widget>
      </item>
     </layout>
    </item>
