--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -184,7 +184,10 @@
                     <item>
                      <layout class="QHBoxLayout" name="horizontalLayout_6">
                       <item>
-                       <widget class="QLabel" name="label_4">
+                       <widget class="QLabel" name="loadPositionLabel">
+                        <property name="enabled">
+                         <bool>false</bool>
+                        </property>
                         <property name="text">
                          <string>Load Position</string>
                         </property>
