--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -249,7 +249,7 @@
             <enum>QLayout::SetMinimumSize</enum>
            </property>
            <item>
-            <widget class="QLabel" name="label_4">
+            <widget class="QLabel" name="currentStressLabel">
              <property name="maximumSize">
               <size>
                <width>16777215</width>
@@ -275,7 +275,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_7">
+            <widget class="QLabel" name="yieldStressLabel">
              <property name="maximumSize">
               <size>
                <width>16777215</width>
@@ -301,7 +301,7 @@
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_9">
+            <widget class="QLabel" name="fractureStressLabel">
              <property name="maximumSize">
               <size>
                <width>16777215</width>
