--- a/crosssections/circleform.ui
+++ b/crosssections/circleform.ui
@@ -28,6 +28,9 @@
        <property name="minimum">
         <double>0.010000000000000</double>
        </property>
+       <property name="singleStep">
+        <double>0.010000000000000</double>
+       </property>
       </widget>
      </item>
     </layout>
