--- a/crosssections/rectangleform.ui
+++ b/crosssections/rectangleform.ui
@@ -35,11 +35,17 @@
        <property name="minimum">
         <double>0.010000000000000</double>
        </property>
+       <property name="singleStep">
+        <double>0.010000000000000</double>
+       </property>
       </widget>
      </item>
      <item row="1" column="1">
       <widget class="QDoubleSpinBox" name="height">
        <property name="minimum">
+        <double>0.010000000000000</double>
+       </property>
+       <property name="singleStep">
         <double>0.010000000000000</double>
        </property>
       </widget>
