Problem of unit coherence solved, finally!

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -134,7 +134,7 @@
              <item>
               <widget class="QLabel" name="label_5">
                <property name="text">
-                <string>Load Value (kN)</string>
+                <string>Load Value (kG)</string>
                </property>
               </widget>
              </item>
@@ -144,7 +144,7 @@
                 <double>3000.000000000000000</double>
                </property>
                <property name="singleStep">
-                <double>0.010000000000000</double>
+                <double>1.000000000000000</double>
                </property>
               </widget>
              </item>
