--- a/crosssections/ibeamform.ui
+++ b/crosssections/ibeamform.ui
@@ -53,8 +53,11 @@
      </item>
      <item row="2" column="1">
       <widget class="QDoubleSpinBox" name="internalWidth">
+       <property name="decimals">
+        <number>3</number>
+       </property>
        <property name="singleStep">
-        <double>0.010000000000000</double>
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
@@ -67,8 +70,11 @@
      </item>
      <item row="3" column="1">
       <widget class="QDoubleSpinBox" name="internalHeight">
+       <property name="decimals">
+        <number>3</number>
+       </property>
        <property name="singleStep">
-        <double>0.010000000000000</double>
+        <double>0.001000000000000</double>
        </property>
       </widget>
      </item>
