--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -203,6 +203,9 @@
                       <property name="enabled">
                        <bool>false</bool>
                       </property>
+                      <property name="singleStep">
+                       <double>0.010000000000000</double>
+                      </property>
                      </widget>
                     </item>
                    </layout>
@@ -330,7 +333,7 @@
      <x>0</x>
      <y>0</y>
      <width>976</width>
-     <height>25</height>
+     <height>29</height>
     </rect>
    </property>
   </widget>
